infra/k8s/base/deploy.mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: admo
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: admo-mlflow:dev
          command:
            - sh
            - -c
            - mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri $MLFLOW_DATABASE_URI --artifacts-destination s3://admo/mlflow
          ports:
            - containerPort: 5000
              name: http
