infra/k8s/base/gw.admo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: admo-gateway
  namespace: admo
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
